# webargs

./: .coveragerc  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  NOTICE  README.rst  azure-pipelines.yml  dev-requirements-py3.txt  dev-requirements.txt  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yaml  build-release.yml  build.yaml
conda.recipe/: meta.yaml
docs/: advanced.rst  api.rst  api_reference.rst  authors.rst  changelog.rst  conf.py  ecosystem.rst  framework_support.rst  index.rst  install.rst  license.rst  quickstart.rst  requirements.txt  upgrading.rst
docs/_static/css/: extra.css
docs/_templates/: donate.html  side-primary.html  side-secondary.html  sponsors.html
docs/_themes/: LICENSE
docs/_themes/kr/: layout.html
docs/_themes/kr_small/: layout.html
docs/_themes/kr_small/static/: flasky.css_t
docs/_themes/lucuma/: footer.html  genindex.html  header.html  layout.html  locale-en_t  locale-es_t  page.html  search-form.html  search.html  searchresults.html  theme.conf  toc.html
docs/_themes/lucuma/static/: translations.js_t
docs/_themes/lucuma/static/fonts/: proximanova-light-webfont.eot  proximanova-lightitalic-webfont.eot  proximanova-regular-webfont.eot  proximanova-semibold-webfont.eot
docs/_themes/lucuma/static/scripts/: doctools.js  main.js  searchtools.js_t
docs/_themes/lucuma/static/styles/: button.css  main.css  normalize.css  print.css  pygments.css  responsive.css  type.css
examples/: aiohttp_example.py  annotations_example.py  bottle_example.py  falcon_example.py  flask_example.py  flaskrestful_example.py  pyramid_example.py  requirements.txt  schema_example.py  tornado_example.py  webapp2_example.py
src/webargs/: __init__.py  aiohttpparser.py  asyncparser.py  bottleparser.py  compat.py  core.py  dict2schema.py  djangoparser.py  falconparser.py  fields.py  flaskparser.py  multidictproxy.py  pyramidparser.py  quartparser.py  testing.py  tornadoparser.py  webapp2parser.py
tests/: common.py  compat.py  conftest.py  test_aiohttpparser.py  test_aiohttpparser_async_functions.py  test_bottleparser.py  test_core.py  test_djangoparser.py  test_falconparser.py  test_flaskparser.py  test_pyramidparser.py  test_sanicparser.py  test_tornadoparser.py  test_twistedparser.py  test_webapp2parser.py
tests/apps/: aiohttp_app.py  bottle_app.py  falcon_app.py  flask_app.py  pyramid_app.py  sanic_app.py
tests/apps/django_app/: __init__.py  manage.py
tests/apps/django_app/base/: settings.py  urls.py  wsgi.py
tests/apps/django_app/echo/: views.py
tests/test_aiohttp/: conftest.py  test_aiohttpparser.py  utils.py
tests/test_py3/: test_aiohttpparser.py  test_aiohttpparser_async_functions.py
tests/testapp/echo/: views.py
tests/testapp/testapp/: settings.py  urls.py  wsgi.py
webargs/: __init__.py  aiohttpparser.py  async.py  async_decorators.py  async_decorators34.py  asyncparser.py  bottleparser.py  compat.py  core.py  djangoparser.py  falconparser.py  fields.py  flaskparser.py  pyramidparser.py  sanicparser.py  testing.py  tornadoparser.py  twistedparser.py  webapp2parser.py
