[metadata]
license_files = LICENSE

[bdist_wheel]
# We build separate wheels for
# Python 2 and 3 because of the conditional
# dependency on simplejson
universal = 0

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
ignore_missing_imports = true
